<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HappyReader</string>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    <string name="menu_capture">Scan QR Code</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="splash_copyright">Copyright &#169; 2015 随心阅 All Rights Reserved\nPowered by 浩阅工作室</string>
    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="splash_version">V %1$s</string>
    <string name="double_click_exit">Press again to exit</string>
    <string name="common_load_more_end">No more content</string>
    <string name="feedback_welcome_info">Thanks for your feedback, I will reply as soon as possible</string>

    <!-- Video Play-->
    <string name="player_title">Media Player</string>
    <string name="player_view_count">Times watched\t</string>
    <string name="player_favor_count">Favorites\t</string>
    <string name="player_comment_count">Comments\t</string>
    <string name="player_publish">Posted on\t</string>
    <string name="player_tags">Tags</string>

    <string name="btn_history">History</string>
    <string name="btn_picture">Picture</string>
    <string name="btn_light">Light</string>
    <string name="btn_ok">Ok</string>
    <string name="qrcode">QR Code</string>
    <string name="barcode">Barcode</string>
    <string name="tips_open_camera_error">Failed to open camera, please ensure the permission is allowed and try again</string>
    <string name="tips_decode_null">No data resolved</string>

    <string name="title_image_picker">Local photo album</string>
    <string name="tb_munion_tip_download_prefix">Downloading:</string>

    <!--新闻速递-->
    <!--微信热文-->
    <!--美图欣赏-->
    <!--边听边看-->
    <!--历史的今天-->
    <!--关于-->
    <string name="hot_news">新闻速递</string>
    <string name="wechat_news">微信热文</string>
    <string name="hot_img">美图欣赏</string>
    <string name="hot_music">边听边看</string>
    <string name="hot_history">历史的今天</string>
    <string name="about_us">关于</string>

</resources>
